2005-11-25  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/Cairo.cs: add font_options* api
	add cairo_get_font_matrix
	* Mono.Cairo/FontOptions.cs: add
	* Mono.Cairo/Graphics.cs: add FontOptions property,
	remove FontSize setter and FontSetSize(),
	remove FontFace() method as SelectFontFace already exists
	remove non-existant TransformFont() and Font property
	
2005-11-16  John Luke  <john.luke@gmail.com>

	* snippets/*.cs: add snippets port
	
2005-11-10  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/Graphics.cs:
	* Mono.Cairo/Surface.cs: remove debugging output
	
2005-10-09  Miguel de Icaza  <miguel@novell.com>

	* Samples/gtk/sysdraw.cs: Fix the sample
	

2005-09-19  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/Graphics.cs: add SelectFontFace and SetFontSize

2005-09-12  Hisham Mardam Bey  <hisham.mardambey@gmail.com>

        * Samples/: Fix all samples to work with new API changes.

2005-09-12  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/Surface.cs: add two ImageSurface ctors
	Obsolete Surface CreateForImage methods in favor of
	the new ImageSurface ctors
 	* Mono.Cairo/Cairo.cs: add cairo_text_extents
 	* Mono.Cairo/Graphics.cs: add TextExtents ()
	
	
2005-09-07  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/Graphics.cs: the Relative path methods
	should use a Distance not a PointD, and update some
	parameter names for better documentation purposes
	remove SetTargetImage (), and SetTargetDrawable ()
	use Graphics.Target = Surface instead
	* Mono.Cairo/Surface.cs: don't reference the surface after
	we create it as it is not necessary
	add the new surfaces to the surfaces hashtable on instantiation 
	* Mono.Cairo/Pattern.cs: don't reference the pattern after
	we create it as it is not necessary
	
2005-09-07 Hisham Mardam Bey <hisham.mardambey@gmail.com>

	* Samples/png: Fixed samples with new changes.
	* Samples/x11: Fixed samples with new changes.
	* Samples/gtk: Fixed samples with new changes.	

2005-09-06  John Luke  <john.luke@gmail.com>
